--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -91,3 +91,9 @@ runs:
                 echo "$RUNNER_OS is not supported"
                 exit 1
               fi
+              
+        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
+          name: change config for FileSystem and Parquet
+          uses: ./.github/actions/dbRunner
+          with:
+              DB-name: ${{ matrix.DB-name }}
