--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -199,19 +199,19 @@ runs:
             choco install tree
             tree ./
             mkdir ./mysql/data1 ./mysql/data2 ./mysql/data3
-            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data1 --port=3307
-            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data2 --port=3308
-            ./mysql/bin/mysqld --initialize-insecure --datadir=./mysql/data3 --port=3309
-            ./mysql/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
-            ./mysql/bin/mysqld --console --datadir=./mysql/data2 --port=3308 &
-            ./mysql/bin/mysqld --console --datadir=./mysql/data3 --port=3309 &
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data1 --port=3307
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data2 --port=3308
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data3 --port=3309
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data2 --port=3308 &
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data3 --port=3309 &
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Setup Database for each instance
           shell: bash
           run: |
-            ./mysql/bin/mysql -u root --port=3307
-            ./mysql/bin/mysql -u root --port=3308
-            ./mysql/bin/mysql -u root --port=3309
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3307
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3308
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3309
         
         
