--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -187,11 +187,11 @@ runs:
         echo "ALTER USER 'root'@'localhost' IDENTIFIED BY 'mysql'; FLUSH PRIVILEGES;" > init.sql
         mkdir ./mysql/data1 ./mysql/data2 ./mysql/data3
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=init.sql --datadir=./mysql/data1 --port=3307  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.sql --datadir=./mysql/data1 --port=3307  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=init.sql --datadir=./mysql/data2 --port=3308  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.sql --datadir=./mysql/data2 --port=3308  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=init.sql --datadir=./mysql/data3 --port=3309  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.sql --datadir=./mysql/data3 --port=3309  --console
         dir
         ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
         dir
